# practical-sessions

./: .gitignore  README.md  pyproject.toml
notebooks/: DP_practice.ipynb  Environments.ipynb  Practice_1.ipynb  StochasticLinearBandits-2023.ipynb  bandits_practice.ipynb  model.py
rlss_practice/: agent.py  bandit_solutions.py  display.py  dp_solutions.py  environments.py  model.py  pd_solutions.py  wrappers.py
